--- a/index.html
+++ b/index.html
@@ -13,231 +13,236 @@
 </head>
 
 <body>
-  <!-- HEADER -->
-  <header class="header container">
-    <img class="logo" src="/public/logo.svg" alt="logo">
-    <nav>
-      <ul class="header-menu">
-        <li class="header-link active-page">
-          <a href="index.html">Main</a>
-        </li>
-        <li class="header-link">
-          <a href="gallery.html">Gallery</a>
-        </li>
-        <li class="header-link">
-          <a href="projects.html">Projects</a>
-        </li>
-        <li class="header-link">
-          <a href="certifications.html">Certification</a>
-        </li>
-        <li class="header-link">
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <!-- HERO SECTION-->
-    <section class="hero container">
-      <div class="hero-slider">
-        <h2>PROJECT<br><strong>Lorum</strong></h2>
-        <div class="hero-btn-slider">
-          <button class="arrow-left-btn">
-            <img src="/public/arrow-left.svg" alt="arrow button">
-          </button>
-          <button class="arrow-right-btn arrow-active-btn">
-            <img class="arrow" src="/public/arrow-right.svg" alt="arrow button">
-          </button>
-          <span class="hero-line"></span>
-        </div>
+  <div id="swup" class="transition-fade">
+    <!-- HEADER -->
+    <header class="header container">
+      <img class="logo" src="/public/logo.svg" alt="logo">
+      <nav>
+        <ul class="header-menu">
+          <li class="header-link active-page">
+            <a href="index.html">Main</a>
+          </li>
+          <li class="header-link">
+            <a href="gallery.html">Gallery</a>
+          </li>
+          <li class="header-link">
+            <a href="projects.html">Projects</a>
+          </li>
+          <li class="header-link">
+            <a href="certifications.html">Certification</a>
+          </li>
+          <li class="header-link">
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-        <div class="hero-project-counter counter">
-          <div class="current-project-wrap">
-            <span class="current-project-counter">0</span>
-            <span class="current-project-counter">1</span>
+    <main>
+      <!-- HERO SECTION-->
+      <section class="hero container">
+        <div class="hero-slider">
+          <h2>PROJECT<br><strong>Lorum</strong></h2>
+          <div class="hero-btn-slider">
+            <button class="arrow-left-btn">
+              <img src="/public/arrow-left.svg" alt="arrow button">
+            </button>
+            <button class="arrow-right-btn arrow-active-btn">
+              <img class="arrow" src="/public/arrow-right.svg" alt="arrow button">
+            </button>
+            <span class="hero-line"></span>
           </div>
-          <span class="border-counter"></span>
-          <span class="project-counter">02</span>
-        </div>
-      </div>
 
-      <div class="hero-photo-container">
-        <img class="hero-photo" src="/public/hero_photo.jpg" alt="photo">
-        <div class="hero-btn-wrapper btn-wrapper">
-          <button class="hero-btn btn">View Project</button>
-          <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
-        </div>
-      </div>
-    </section>
-    <!-- ABOUT SECTION-->
-    <section class="about container section">
-      <div class="about-container">
-        <div class="about-photos">
-          <img src="/public/about_photo1.jpg" alt="photo">
-          <img src="/public/about_photo2.jpg" alt="photo">
-          <img class="about-photo3" src="/public/about_photo3.jpg" alt="photo">
+          <div class="hero-project-counter counter">
+            <div class="current-project-wrap">
+              <span class="current-project-counter">0</span>
+              <span class="current-project-counter">1</span>
+            </div>
+            <span class="border-counter"></span>
+            <span class="project-counter">02</span>
+          </div>
         </div>
 
-        <div class="about-wrapper">
-          <h2 class="about-title">About</h2>
-          <p class="about-description">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make
-            a type specimen book. It has survived not only five centuries, but also the leap into electronic
-            typesetting,
-            remaining essentially unchanged.
-          </p>
-          <div class="about-btn-wrapper btn-wrapper">
-            <button class="about-btn btn">Read More</button>
+        <div class="hero-photo-container">
+          <img class="hero-photo" src="/public/hero_photo.jpg" alt="photo">
+          <div class="hero-btn-wrapper btn-wrapper">
+            <button class="hero-btn btn">View Project</button>
             <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
           </div>
         </div>
-      </div>
-    </section>
-    <!-- FEATURES SECTION-->
-    <section class="features container section">
-      <h2>Main Focus/Mission Statement</h2>
-      <div class="features-list">
-        <div class="first-list-el">
-          <span class="num-list">1</span>
-          <p class="first-list-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur,
-            lectus et facilisis placerat.</p>
-        </div>
-        <div class="second-list-el">
-          <span class="num-list">2</span>
-          <p class="second-list-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur,
-            lectus et facilisis
-            placerat, magna
-            mauris porttitor tortor, a auctor est felis ut nisl.</p>
-        </div>
-      </div>
-    </section>
-    <!-- PROJECTS SECTION-->
-    <section class="projects container section">
-      <h2>Our Projects</h2>
-      <div class="projects-wrapper">
-        <div class="projects-box1">
-          <div class="project-overlay"></div>
-          <div class="project1-content">
-            <h2><strong class="project-title">Sample<br>Project</strong></h2>
-            <div class="projects-view-wrapper btn-wrapper">
-              <button class="projects-view-btn btn">View More</button>
-              <img class="projects-arrow arrow" src="/public/arrow-right-white.svg" alt="arrow">
+      </section>
+      <!-- ABOUT SECTION-->
+      <section class="about container section">
+        <div class="about-container">
+          <div class="about-photos">
+            <img src="/public/about_photo1.jpg" alt="photo">
+            <img src="/public/about_photo2.jpg" alt="photo">
+            <img class="about-photo3" src="/public/about_photo3.jpg" alt="photo">
+          </div>
+
+          <div class="about-wrapper">
+            <h2 class="about-title">About</h2>
+            <p class="about-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's
+              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+              to
+              make
+              a type specimen book. It has survived not only five centuries, but also the leap into electronic
+              typesetting,
+              remaining essentially unchanged.
+            </p>
+            <div class="about-btn-wrapper btn-wrapper">
+              <button class="about-btn btn">Read More</button>
+              <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
             </div>
           </div>
-          <img src="/public/project1.jpg" alt="photo">
         </div>
-
-        <div class="projects-box2">
-          <img src="/public/project2.jpg" alt="photo">
+      </section>
+      <!-- FEATURES SECTION-->
+      <section class="features container section">
+        <h2>Main Focus/Mission Statement</h2>
+        <div class="features-list">
+          <div class="first-list-el">
+            <span class="num-list">1</span>
+            <p class="first-list-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur,
+              lectus et facilisis placerat.</p>
+          </div>
+          <div class="second-list-el">
+            <span class="num-list">2</span>
+            <p class="second-list-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur,
+              lectus et facilisis
+              placerat, magna
+              mauris porttitor tortor, a auctor est felis ut nisl.</p>
+          </div>
         </div>
-
-        <div class="projects-box3">
-          <img src="/public/project3.jpg" alt="photo">
-        </div>
-
-        <div class="projects-box4">
-          <img src="/public/project4.jpg" alt="photo">
-        </div>
-
-        <div class="projects-box5">
-          <img src="/public/project5.jpg" alt="photo">
-        </div>
-
-      </div>
-
-      <div class="btn-some">
-        <div class="projects-more-wrapper btn-wrapper">
-          <button class="projects-more-btn btn">All Projects
-          </button>
-          <img class="arrow" src="/public/arrow-right-white.svg" alt="arrow">
-        </div>
-
-      </div>
-    </section>
-    <!-- CONTACT SECTION-->
-    <section class="contact container section">
-      <div class="contact-container">
-        <h2 class="contact-title">Contact Us</h2>
-        <div class="contact-form">
-          <form action="#">
-            <input class="contact-input" type="text" placeholder="Name" id="name">
-            <input class="contact-input" type="text" placeholder="Phone Number" id="number" required>
-            <input class="contact-input" type="email" placeholder="E-mail" id="email" required>
-            <input class="contact-input" type="text" placeholder="Interested In" id="interested">
-            <textarea class="contact-input message-input" id="message" placeholder="Message" required></textarea>
-
-            <div class="email-btn-wrapper btn-wrapper">
-              <button type="submit" class="email-btn btn">Send Email</button>
-              <img class="arrow" src="/public/arrow-right-white.svg" alt="arrow">
+      </section>
+      <!-- PROJECTS SECTION-->
+      <section class="projects container section">
+        <h2>Our Projects</h2>
+        <div class="projects-wrapper">
+          <div class="projects-box1">
+            <div class="project-overlay"></div>
+            <div class="project1-content">
+              <h2><strong class="project-title">Sample<br>Project</strong></h2>
+              <div class="projects-view-wrapper btn-wrapper">
+                <button class="projects-view-btn btn">View More</button>
+                <img class="projects-arrow arrow" src="/public/arrow-right-white.svg" alt="arrow">
+              </div>
             </div>
-          </form>
-          <div class="photo">
-            <img class="contact-photo" src="/public/contact-us.jpg" alt="photo">
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- FOOTER -->
-    <footer class="footer section">
-      <div class="footer-container">
-        <div class="footer-logo">
-          <img src="/public/logo-light.svg" alt="Logo">
-        </div>
-        <div class="information-container">
-          <div class="">
-            <h4 class="footer-title">Information</h4>
+            <img src="/public/project1.jpg" alt="photo">
           </div>
 
-          <div class="footer-pages">
-            <a href="index.html">Main</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="projects.html">Projects</a>
-            <a href="certifications.html">Certifications</a>
-            <a href="#">Contacts</a>
+          <div class="projects-box2">
+            <img src="/public/project2.jpg" alt="photo">
+          </div>
+
+          <div class="projects-box3">
+            <img src="/public/project3.jpg" alt="photo">
+          </div>
+
+          <div class="projects-box4">
+            <img src="/public/project4.jpg" alt="photo">
+          </div>
+
+          <div class="projects-box5">
+            <img src="/public/project5.jpg" alt="photo">
           </div>
 
         </div>
 
-        <div class="contacts-container">
-          <h4 class="footer-title">Contacts</h4>
-          <div class="address">
-            <img class="contact-icon" src="/public/map_icon.svg" alt="Map icon">
-            <a href="https://maps.app.goo.gl/JvSjJqxTfXS1pSZp6">1234 Sample Street <br>Austin Texas 78704</a>
+        <div class="btn-some">
+          <div class="projects-more-wrapper btn-wrapper">
+            <button class="projects-more-btn btn">All Projects
+            </button>
+            <img class="arrow" src="/public/arrow-right-white.svg" alt="arrow">
           </div>
-          <div class="phone-num">
-            <img class="contact-icon" src="/public/phone_icon.svg" alt="Phone icon">
-            <a href="tel:512.333.2222">512.333.2222</a>
-          </div>
-          <div class="email">
-            <img class="contact-icon" src="/public/email_icon.svg" alt="Email icon">
-            <a href="mailto:sampleemail@gmail.com">sampleemail@gmail.com</a>
-          </div>
-        </div>
 
-        <div class="socials-container">
-          <h4 class="footer-title">Social Media</h4>
-          <a href="https://www.facebook.com/" target="_blank">
-            <img src="/public/facebook-logo.svg" alt="Facebook">
-          </a>
-          <a href="https://twitter.com/" target="_blank">
-            <img src="public/x-logo.svg" alt="Twitter">
-          </a>
-          <a href="https://www.linkedin.com/" target="_blank">
-            <img src="/public/linked-logo.svg" alt="Linked In">
-          </a>
-          <a href="https://www.pinterest.com/" target="_blank">
-            <img src="/public/pinterest-logo.svg" alt="Pinterest">
-          </a>
         </div>
-      </div>
-      <div class="footer-rights">
-        <h5>© 2024 All Rights Reserved</h5>
-      </div>
-    </footer>
-  </main>
+      </section>
+      <!-- CONTACT SECTION-->
+      <section class="main-contact container section">
+        <div class="contact-container">
+          <h2 class="contact-title">Contact Us</h2>
+          <div class="contact-form">
+            <form action="#">
+              <input class="contact-input" type="text" placeholder="Name" id="name">
+              <input class="contact-input" type="text" placeholder="Phone Number" id="number" required>
+              <input class="contact-input" type="email" placeholder="E-mail" id="email" required>
+              <input class="contact-input" type="text" placeholder="Interested In" id="interested">
+              <textarea class="contact-input message-input" id="message" placeholder="Message" required></textarea>
+
+              <div class="email-btn-wrapper btn-wrapper">
+                <button type="submit" class="email-btn btn">Send Email</button>
+                <img class="arrow" src="/public/arrow-right-white.svg" alt="arrow">
+              </div>
+            </form>
+            <div class="photo">
+              <img class="contact-photo" src="/public/contact-us.jpg" alt="photo">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- FOOTER -->
+      <footer class="footer section">
+        <div class="footer-container">
+          <div class="footer-logo">
+            <img src="/public/logo-light.svg" alt="Logo">
+          </div>
+          <div class="information-container">
+            <div class="">
+              <h4 class="footer-title">Information</h4>
+            </div>
+
+            <div class="footer-pages">
+              <a href="index.html">Main</a>
+              <a href="gallery.html">Gallery</a>
+              <a href="projects.html">Projects</a>
+              <a href="certifications.html">Certifications</a>
+              <a href="contact.html">Contacts</a>
+            </div>
+
+          </div>
+
+          <div class="contacts-container">
+            <h4 class="footer-title">Contacts</h4>
+            <div class="address">
+              <img class="contact-icon" src="/public/map_icon.svg" alt="Map icon">
+              <a href="https://maps.app.goo.gl/JvSjJqxTfXS1pSZp6">1234 Sample Street <br>Austin Texas
+                78704</a>
+            </div>
+            <div class="phone-num">
+              <img class="contact-icon" src="/public/phone_icon.svg" alt="Phone icon">
+              <a href="tel:512.333.2222">512.333.2222</a>
+            </div>
+            <div class="email">
+              <img class="contact-icon" src="/public/email_icon.svg" alt="Email icon">
+              <a href="mailto:sampleemail@gmail.com">sampleemail@gmail.com</a>
+            </div>
+          </div>
+
+          <div class="socials-container">
+            <h4 class="footer-title">Social Media</h4>
+            <a href="https://www.facebook.com/" target="_blank">
+              <img src="/public/facebook-logo.svg" alt="Facebook">
+            </a>
+            <a href="https://twitter.com/" target="_blank">
+              <img src="public/x-logo.svg" alt="Twitter">
+            </a>
+            <a href="https://www.linkedin.com/" target="_blank">
+              <img src="/public/linked-logo.svg" alt="Linked In">
+            </a>
+            <a href="https://www.pinterest.com/" target="_blank">
+              <img src="/public/pinterest-logo.svg" alt="Pinterest">
+            </a>
+          </div>
+        </div>
+        <div class="footer-rights">
+          <h5>© 2024 All Rights Reserved</h5>
+        </div>
+      </footer>
+    </main>
+  </div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
