--- a/sample-project.html
+++ b/sample-project.html
@@ -31,7 +31,7 @@
                     <a href="certifications.html">Certification</a>
                 </li>
                 <li class="header-link">
-                    <a href="certifications.html">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -65,6 +65,7 @@
                 with the release of Letraset sheets containing Lorem Ipsum passages.
             </p>
         </section>
+
         <!-- FOOTER -->
         <footer class="footer section">
             <div class="footer-container">
@@ -81,7 +82,7 @@
                         <a href="gallery.html">Gallery</a>
                         <a href="projects.html">Projects</a>
                         <a href="certifications.html">Certifications</a>
-                        <a href="#">Contacts</a>
+                        <a href="contact.html">Contacts</a>
                     </div>
 
                 </div>
