--- a/certifications.html
+++ b/certifications.html
@@ -31,7 +31,7 @@
                     <a href="certifications.html">Certification</a>
                 </li>
                 <li class="header-link">
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -88,8 +88,8 @@
                         <a href="index.html">Main</a>
                         <a href="gallery.html">Gallery</a>
                         <a href="projects.html">Projects</a>
-                        <a href="#">Certifications</a>
-                        <a href="#">Contacts</a>
+                        <a href="certifications.html">Certifications</a>
+                        <a href="contact.html">Contacts</a>
                     </div>
 
                 </div>
