--- a/projects.html
+++ b/projects.html
@@ -13,182 +13,189 @@
 </head>
 
 <body>
-    <!-- HEADER -->
-    <header class="header container">
-        <img class="logo" src="/public/logo.svg" alt="logo">
-        <nav>
-            <ul class="header-menu">
-                <li class="header-link ">
-                    <a href="index.html">Main</a>
-                </li>
-                <li class="header-link">
-                    <a href="gallery.html">Gallery</a>
-                </li>
-                <li class="header-link active-page">
-                    <a href="projects.html">Projects</a>
-                </li>
-                <li class="header-link">
-                    <a href="certifications.html">Certification</a>
-                </li>
-                <li class="header-link">
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <div id="swup" class="transition-fade">
+        <!-- HEADER -->
+        <header class="header container">
+            <img class=" logo" src="/public/logo.svg" alt="logo">
+            <nav>
+                <ul class="header-menu">
+                    <li class="header-link ">
+                        <a href="index.html">Main</a>
+                    </li>
+                    <li class="header-link">
+                        <a href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="header-link active-page">
+                        <a href="projects.html">Projects</a>
+                    </li>
+                    <li class="header-link">
+                        <a href="certifications.html">Certification</a>
+                    </li>
+                    <li class="header-link">
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
-    <main>
-        <section class="projects container">
-            <h2 class="title">Our<br><strong>Projects</strong></h2>
-            <div class="projects-wrap">
-                <div class="project">
-                    <img class="project-photo" src="/public/projects/project1.jpg" alt="photo">
-                    <div class="project-content">
-                        <h3>Sample Project</h3>
-                        <p class="project-description">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been
-                            the
-                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of
-                            type
-                            and scrambled it to make a type specimen book.
-                        </p>
+        <main>
+            <section class="projects container">
+                <h2 class="title">Our<br><strong>Projects</strong></h2>
+                <div class="projects-wrap">
+                    <div class="project">
+                        <img class="project-photo" src="/public/projects/project1.jpg" alt="photo">
+                        <div class="project-content">
+                            <h3>Sample Project</h3>
+                            <p class="project-description">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been
+                                the
+                                industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                                galley
+                                of
+                                type
+                                and scrambled it to make a type specimen book.
+                            </p>
 
-                        <!-- View btn -->
-                        <a class="btn-view-wrapper btn-wrapper" href="/sample-project.html">
-                            <button class="btn-view btn">View More</button>
-                            <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
+                            <!-- View btn -->
+                            <a class="btn-view-wrapper btn-wrapper" href="/sample-project.html">
+                                <button class="btn-view btn">View More</button>
+                                <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <img class="project-photo" src="/public/projects/project2.jpg" alt="photo">
+                        <div class="project-content">
+                            <h3>Sample Project 2</h3>
+                            <p class="project-description">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been
+                                the
+                                industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                                galley
+                                of
+                                type
+                                and scrambled it to make a type specimen book.
+                            </p>
+                            <!-- View btn -->
+                            <div class="btn-view-wrapper btn-wrapper">
+                                <button class="btn-view btn">View More</button>
+                                <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="project">
+                        <img class="project-photo" src="/public/projects/project3.jpg" alt="photo">
+                        <div class="project-content">
+                            <h3>Sample Project 3</h3>
+                            <p class="project-description">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been
+                                the
+                                industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                                galley
+                                of
+                                type
+                                and scrambled it to make a type specimen book.
+                            </p>
+                            <!-- View btn -->
+                            <div class="btn-view-wrapper btn-wrapper">
+                                <button class="btn-view btn">View More</button>
+                                <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- slider -->
+                <div class="slider">
+                    <div class="counter">
+                        <div class="current-project-wrap">
+                            <span class="current-gallery-counter">0</span>
+                            <span class="current-gallery-counter">1</span>
+                        </div>
+                        <span class="border-counter"></span>
+                        <span class="project-counter">05</span>
+                    </div>
+                    <div class="gallery-btn-slider">
+                        <button class="arrow-left-btn">
+                            <img src="/public/arrow-left.svg" alt="arrow button">
+                        </button>
+                        <button class="arrow-right-btn arrow-active-btn">
+                            <img src="/public/arrow-right.svg" alt="arrow button">
+                        </button>
+                    </div>
+                </div>
+            </section>
+
+            <!-- FOOTER -->
+            <footer class="footer section">
+                <div class="footer-container">
+                    <div class="footer-logo">
+                        <img src="/public/logo-light.svg" alt="Logo">
+                    </div>
+                    <div class="information-container">
+                        <div class="">
+                            <h4 class="footer-title">Information</h4>
+                        </div>
+
+                        <div class="footer-pages">
+                            <a href="index.html">Main</a>
+                            <a href="gallery.html">Gallery</a>
+                            <a href="projects.html">Projects</a>
+                            <a href="certifications.html">Certifications</a>
+                            <a href="contact.html">Contacts</a>
+                        </div>
+
+                    </div>
+
+                    <div class="contacts-container">
+                        <h4 class="footer-title">Contacts</h4>
+                        <div class="address">
+                            <img class="contact-icon" src="/public/map_icon.svg" alt="Map icon">
+                            <a href="https://maps.app.goo.gl/JvSjJqxTfXS1pSZp6">1234 Sample Street <br>Austin Texas
+                                78704</a>
+                        </div>
+                        <div class="phone-num">
+                            <img class="contact-icon" src="/public/phone_icon.svg" alt="Phone icon">
+                            <a href="tel:512.333.2222">512.333.2222</a>
+                        </div>
+                        <div class="email">
+                            <img class="contact-icon" src="/public/email_icon.svg" alt="Email icon">
+                            <a href="mailto:sampleemail@gmail.com">sampleemail@gmail.com</a>
+                        </div>
+                    </div>
+
+                    <div class="socials-container">
+                        <h4 class="footer-title">Social Media</h4>
+                        <a href="https://www.facebook.com/" target="_blank">
+                            <img src="/public/facebook-logo.svg" alt="Facebook">
+                        </a>
+                        <a href="https://twitter.com/" target="_blank">
+                            <img src="public/x-logo.svg" alt="Twitter">
+                        </a>
+                        <a href="https://www.linkedin.com/" target="_blank">
+                            <img src="/public/linked-logo.svg" alt="Linked In">
+                        </a>
+                        <a href="https://www.pinterest.com/" target="_blank">
+                            <img src="/public/pinterest-logo.svg" alt="Pinterest">
                         </a>
                     </div>
                 </div>
-                <div class="project">
-                    <img class="project-photo" src="/public/projects/project2.jpg" alt="photo">
-                    <div class="project-content">
-                        <h3>Sample Project 2</h3>
-                        <p class="project-description">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been
-                            the
-                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of
-                            type
-                            and scrambled it to make a type specimen book.
-                        </p>
-                        <!-- View btn -->
-                        <div class="btn-view-wrapper btn-wrapper">
-                            <button class="btn-view btn">View More</button>
-                            <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
-                        </div>
-                    </div>
-
+                <div class="footer-rights">
+                    <h5>© 2024 All Rights Reserved</h5>
                 </div>
-                <div class="project">
-                    <img class="project-photo" src="/public/projects/project3.jpg" alt="photo">
-                    <div class="project-content">
-                        <h3>Sample Project 3</h3>
-                        <p class="project-description">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been
-                            the
-                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of
-                            type
-                            and scrambled it to make a type specimen book.
-                        </p>
-                        <!-- View btn -->
-                        <div class="btn-view-wrapper btn-wrapper">
-                            <button class="btn-view btn">View More</button>
-                            <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <!-- slider -->
-            <div class="slider">
-                <div class="counter">
-                    <div class="current-project-wrap">
-                        <span class="current-gallery-counter">0</span>
-                        <span class="current-gallery-counter">1</span>
-                    </div>
-                    <span class="border-counter"></span>
-                    <span class="project-counter">05</span>
-                </div>
-                <div class="gallery-btn-slider">
-                    <button class="arrow-left-btn">
-                        <img src="/public/arrow-left.svg" alt="arrow button">
-                    </button>
-                    <button class="arrow-right-btn arrow-active-btn">
-                        <img src="/public/arrow-right.svg" alt="arrow button">
-                    </button>
-                </div>
-            </div>
-        </section>
-
-        <!-- FOOTER -->
-        <footer class="footer section">
-            <div class="footer-container">
-                <div class="footer-logo">
-                    <img src="/public/logo-light.svg" alt="Logo">
-                </div>
-                <div class="information-container">
-                    <div class="">
-                        <h4 class="footer-title">Information</h4>
-                    </div>
-
-                    <div class="footer-pages">
-                        <a href="index.html">Main</a>
-                        <a href="gallery.html">Gallery</a>
-                        <a href="projects.html">Projects</a>
-                        <a href="certifications.html">Certifications</a>
-                        <a href="#">Contacts</a>
-                    </div>
-
-                </div>
-
-                <div class="contacts-container">
-                    <h4 class="footer-title">Contacts</h4>
-                    <div class="address">
-                        <img class="contact-icon" src="/public/map_icon.svg" alt="Map icon">
-                        <a href="https://maps.app.goo.gl/JvSjJqxTfXS1pSZp6">1234 Sample Street <br>Austin Texas
-                            78704</a>
-                    </div>
-                    <div class="phone-num">
-                        <img class="contact-icon" src="/public/phone_icon.svg" alt="Phone icon">
-                        <a href="tel:512.333.2222">512.333.2222</a>
-                    </div>
-                    <div class="email">
-                        <img class="contact-icon" src="/public/email_icon.svg" alt="Email icon">
-                        <a href="mailto:sampleemail@gmail.com">sampleemail@gmail.com</a>
-                    </div>
-                </div>
-
-                <div class="socials-container">
-                    <h4 class="footer-title">Social Media</h4>
-                    <a href="https://www.facebook.com/" target="_blank">
-                        <img src="/public/facebook-logo.svg" alt="Facebook">
-                    </a>
-                    <a href="https://twitter.com/" target="_blank">
-                        <img src="public/x-logo.svg" alt="Twitter">
-                    </a>
-                    <a href="https://www.linkedin.com/" target="_blank">
-                        <img src="/public/linked-logo.svg" alt="Linked In">
-                    </a>
-                    <a href="https://www.pinterest.com/" target="_blank">
-                        <img src="/public/pinterest-logo.svg" alt="Pinterest">
-                    </a>
-                </div>
-            </div>
-            <div class="footer-rights">
-                <h5>© 2024 All Rights Reserved</h5>
-            </div>
-        </footer>
-    </main>
+            </footer>
+        </main>
+    </div>
 
     <script type="module" src="/src/main.js"></script>
-
 </body>
 
 </html>
