--- a/certifications.html
+++ b/certifications.html
@@ -42,12 +42,12 @@
             <h2 class="title">Company<br><strong>Certifications</strong></h2>
 
             <div class="certifications-wrap">
-                <img class="certificate-img" src="/public/certificate.jpg" alt="certificate">
+                <img class="certificate-img" src="./public/certificate.jpg" alt="certificate">
 
 
                 <div class="certificate-content">
                     <div class="certificate-title">
-                        <img class="certificate-mark" src="/public/certificate-mark.svg" alt="image">
+                        <img class="certificate-mark" src="./public/certificate-mark.svg" alt="image">
                         <h3>Academic<br>Proficiency Award</h3>
                     </div>
                     <p class="certificate-description">
