--- a/certifications.html
+++ b/certifications.html
@@ -42,7 +42,7 @@
             <h2 class="title">Company<br><strong>Certifications</strong></h2>
 
             <div class="certifications-wrap">
-                <img class="certificate-img" src="./public/certificate.jpg" alt="certificate">
+                <img class="certificate-img" src="./public/gallery/photo3.jpg" alt="certificate">
 
 
                 <div class="certificate-content">
