--- a/contact.html
+++ b/contact.html
@@ -40,17 +40,28 @@
 
         <main>
             <section class="contact container">
-                <h2 class="title">Contact<br><strong>Information</strong></h2>
+                <div class="contact-content">
+                    <h2 class="title">Contact<br><strong>Information</strong></h2>
 
-                <h6 class="contact-address"><strong>Digital Project</strong><br>1234 Sample Street Austin Texas 76401
-                </h6>
+                    <h6 class="contact-address"><strong>Digital Project</strong><br>1234 Sample Street Austin Texas
+                        76401
+                    </h6>
 
-                <h6 class="contact-geo"><strong>512.333.2222</strong></h6>
+                    <h6 class="contact-geo"><strong>512.333.2222</strong></h6>
 
-                <p>sampleemail@gmail.com</p>
+                    <p>sampleemail@gmail.com</p>
 
-                <div class="email-btn-wrapper btn-wrapper">
-                    <button type="submit" class="email-btn btn">Contact US</button>
+                    <div class="contact-btn-wrapper btn-wrapper">
+                        <button type="submit" class="contact-btn btn">Contact us</button>
+                    </div>
+                </div>
+
+                <!-- map -->
+                <div class="map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109987.48556561358!2d-97.70883411313615!3d30.51795893954646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644d23f643370fd%3A0x8ea5000a6a0620c!2z0KDQsNGD0L3QtC3QoNC-0LosINCi0LXRhdCw0YEgNzg2ODEsINCh0L_QvtC70YPRh9C10L3RliDQqNGC0LDRgtC4INCQ0LzQtdGA0LjQutC4!5e0!3m2!1suk!2sua!4v1717349938396!5m2!1suk!2sua"
+                        width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
 
