--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <main>
-      <!-- HERO SECTION-->
+      <!-- HERO SECTION -->
       <section class="hero container">
         <div class="hero-slider">
           <h2>PROJECT<br><strong>Lorum</strong></h2>
@@ -55,7 +55,7 @@
 
           <div class="hero-project-counter counter">
             <div class="current-project-wrap">
-              <span class="current-project-counter">0</span>
+              <span class="current-project-counter-0">0</span>
               <span class="current-project-counter">1</span>
             </div>
             <span class="border-counter"></span>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="hero-photo-container">
-          <img class="hero-photo" src="/public/hero_photo.jpg" alt="photo">
+          <img class="hero-photo" src="/public/hero_photo-1.jpg" alt="photo">
           <div class="hero-btn-wrapper btn-wrapper">
             <button class="hero-btn btn">View Project</button>
             <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
